add basket page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,22 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar { /* chrome based */
+  width: 0px;  /* ширина scrollbar'a */
+  background: transparent;  /* опционально */
+}
 
 body {
   color: black;
-  background-color: white;
+}
+
+-webkit-scrollbar {
+  width: 0;
 }
 
 @layer utilities {
